--- a/style.css
+++ b/style.css
@@ -2,27 +2,27 @@ body {
     background-color: antiquewhite;
 }
 
-.box0 {
+.box-two {
     display: flex;
     justify-content: space-between;
     margin-bottom: 20px;
 }
 
-.container0 {
+.container-bottom-right {
     background-color: aquamarine;
     width: 800px;
     height: 400px;
     border-radius: 0 0 200px 0;
 }
 
-.container1 {
+.container-bottom-left {
     background-color: hotpink;
     width: 500px;
     height: 400px;
     border-radius: 0 0 0 200px;
 }
 
-.container2 {
+.container-all-round {
     background-color: azure;
     width: 1300px;
     height: 600px;
@@ -30,19 +30,13 @@ body {
     border-radius: 500px;
 }
 
-.box1 {
+.box {
     display: flex;
     justify-content: space-between;
     margin-top: 20px;
 }
 
-.container3 {
-    background-color: black;
-    width: 650px;
-    height: 400px;
-}
-
-.container4 {
+.container-box {
     background-color: black;
     width: 650px;
     height: 400px;
